# kaleidoscope

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  lexer.cpp
